force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Subject__c/ucinn_ascendv2__AI_Chatbot_Subject__c.object-meta.xml
<CustomObject>
    <label>AI Chatbot Subject</label>
    <nameField>
        <label>AI Chatbot Subject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Chatbot Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>