force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Subject__c/fields/ucinn_ascendv2__AI_Chatbot_Resource__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__AI_Chatbot_Resource__c</fullName>
    <label>AI Chatbot Resource</label>
    <referenceTo>ucinn_ascendv2__AI_Chatbot_Resource__c</referenceTo>
    <relationshipLabel>AI Chatbot Subjects</relationshipLabel>
    <relationshipName>AI_Chatbot_Subjects_AI_Chatbot_Resource</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>