force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Subject__c/fields/ucinn_ascendv2__Is_Show_On_Chatbot__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Show_On_Chatbot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show On Chatbot</label>
    <type>Checkbox</type>
</CustomField>