force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Subject__c/fields/ucinn_ascendv2__Resource_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Resource_Id_Formula__c</fullName>
    <formula>ucinn_ascendv2__AI_Chatbot_Resource__r.ucinn_ascendv2__Resource_Id__c</formula>
    <label>Resource Id Formula</label>
    <type>Text</type>
</CustomField>