force-app/main/default/objects/ucinn_ascendv2__AI_Chatbot_Subject__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__AI_Chatbot_Resource__c</columns>
    <columns>ucinn_ascendv2__Subject_Name__c</columns>
    <columns>ucinn_ascendv2__Is_Show_On_Chatbot__c</columns>
    <columns>ucinn_ascendv2__File_Name__c</columns>
    <columns>ucinn_ascendv2__Subject_Id__c</columns>
    <columns>ucinn_ascendv2__Resource_Id_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>